--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -9,7 +9,7 @@ github_repo_root_url: https://github.com/Jarvis-Consulting-Group/jarvis_data_eng
 # 2) explain your passion for the role you are looking for (e.g. developer, BSA, QA, tech support, etc.)
 # 3) mention what kind of role you are looking for
 # 4) briefly talk about your qualifications (soft and tech) to justify why the hiring manager should hire your 
-summary: As a recent Finance and Economics graduate from Wilfrid Laurier University, I have taken several courses in RDBMS and developed a keen interest in business systems analysis. My internships have led across broad spheres of the fintech space, starting at a venture capital firm where I networked with founders of start-up technology companies, documented their processes and leveraged Python APIs to streamline data entry. At CGI, I liaised between clients, SMEs and implementation teams for requirements elicitation and to ensure that SLAs were being met. Additionally, I am proud to be the founder of several charity initiatives that have raised funds for the Down Syndrome Association of Toronto and the Arthritis Society of Canada. I am excited to bring my dynamic leadership experience, collaborative skills and technical experience to a full-time business systems analyst role.
+summary: I am a recent Finance and Economics graduate from Wilfrid Laurier University with 1.5 years of cross-functional work experience and knowledge of RDBMS. Through my research initiatives, I have developed a keen interest in analyzing business systems and identifying opportunities to improve processes. My background in consulting has enabled me to liaise between clients, SMEs and implementation teams to coordinate SLAs. Additionally, I am proud to be the founder of several charity initiatives that have raised funds for the Down Syndrome Association of Toronto and the Arthritis Society of Canada. I am excited to bring my dynamic leadership skills, collaborative mindset, and technical experience to a full-time business systems analyst role.
 
 skills:
   # Please include 
@@ -56,7 +56,7 @@ professional_experience:
     duration: "2023-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
     # Avoid the following terms: training, learning, etc. Instead, you should focus on the work, such as worked on XYY; Wrote ABC document; Analyzed QWE project;
-    description: "Work within an Agile/Scrum framework to collaborate with cross-functional teams and design RDBMS systems to meet the business goals. Making recommendations for solutions or improvements that can be accomplished through new technology or alternative uses of existing technology. Possess in-depth knowledge of Linux, SQL, PostgreSQL, Docker and VM as well as Git version control tools."
+    description: "Works within an Agile/Scrum framework to collaborate with cross-functional teams and design RDBMS systems to meet the business goals. Makes recommendations for solutions or improvements that can be accomplished through new technology or alternative uses of existing technology. Possesses in-depth knowledge of Linux, SQL, PostgreSQL, Docker and VM as well as Git version control tools."
   - title: "Research Analyst"
     company: "Imzado Trading"
     duration: "2023"
